<resources>
    <string name="app_name">NotesApp</string>
    <string name="register_usuario">Nombre de usuario</string>
    <string name="register_nombre">Nombre Completo</string>
    <string name="register_email">Correo Electrónico</string>
    <string name="register_clave">Contraseña</string>
    <string name="register_clave2">Confirmar Clave</string>
    <string name="register_guardar">Registrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
